--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,5 @@
+@import "icon";
+
 blockquote, body, dd, dir, dl, fieldset, figure, form, h1, h2, h3, h4, h5, h6, hr, input, legend, menu, ol, optgroup, p, pre, tbody, td, textarea, tfoot, th, thead, ul {
     margin: 0;
     padding: 0
